fix: make task card and blurry background appear related to current screen position

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,7 +3,7 @@
     width: 100%;
     backdrop-filter: blur(15px);
     z-index: 5;
-    position: absolute;
+    position: fixed;
     top: 0%;
     bottom: 0%;
 }
