--- a/src/components/TaskCard/TaskCard.css
+++ b/src/components/TaskCard/TaskCard.css
@@ -1,8 +1,7 @@
 .task-card{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
     transform: translate(-50%, -50%);
     width: 628px;
     height: 368px;
